--- a/PPTX_and_stats/sbPlots.ipynb
+++ b/PPTX_and_stats/sbPlots.ipynb
@@ -28,7 +28,8 @@
     "]\n",
     "df=DF({'d':data})\n",
     "\n",
-    "histo_n_fit(df=df,xkey='d',rv=norm(mean(data),stdev(data)), xlabel=\"alskdjf\",x_min=30,legend=True,grid=True,stat='proportion')"
+    "histo_n_fit(df=df,xkey='d',rv=norm(mean(data),stdev(data)), xlabel=\"alskdjf\",\n",
+    "            x_min=30,legend=True,grid=True,stat='proportion')"
    ]
   },
   {
@@ -84,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d12866a",
+   "id": "a2742743",
    "metadata": {},
    "outputs": [],
    "source": []
