--- a/PPTX_and_stats/Binomial.ipynb
+++ b/PPTX_and_stats/Binomial.ipynb
@@ -1224,8 +1224,336 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "42f039fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import beta\n",
+    "\n",
+    "def qbeta(p, shape1, shape2, ncp=0, lower_tail=True, log_p=False):\n",
+    "    if ncp != 0:\n",
+    "        raise NotImplementedError(\"Non-central beta distribution is not implemented in SciPy\")\n",
+    "    \n",
+    "    if log_p:\n",
+    "        p = np.exp(p)\n",
+    "    \n",
+    "    if not lower_tail:\n",
+    "        p = 1 - p\n",
+    "    \n",
+    "    return beta.ppf(p, shape1, shape2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "66f1c648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "import numpy as np\n",
+    "\n",
+    "def pbinom(q, size, prob, lower_tail=True, log_p=False):\n",
+    "    \"\"\"\n",
+    "    Cumulative distribution function for the binomial distribution.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    q (int or array-like): Quantile(s)\n",
+    "    size (int): Number of trials\n",
+    "    prob (float): Probability of success on each trial\n",
+    "    lower_tail (bool): If True (default), probabilities are P[X ≤ x], otherwise P[X > x]\n",
+    "    log_p (bool): If True, probabilities are given as log(p)\n",
+    "    \n",
+    "    Returns:\n",
+    "    float or array-like: Cumulative probabilities\n",
+    "    \"\"\"\n",
+    "    if lower_tail:\n",
+    "        result = stats.binom.cdf(q, size, prob)\n",
+    "    else:\n",
+    "        result = stats.binom.sf(q, size, prob)\n",
+    "    \n",
+    "    if log_p:\n",
+    "        return np.log(result)\n",
+    "    else:\n",
+    "        return result\n",
+    "\n",
+    "def qbinom(p, size, prob, lower_tail=True, log_p=False):\n",
+    "    \"\"\"\n",
+    "    Quantile function for the binomial distribution.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    p (float or array-like): Probability or probabilities\n",
+    "    size (int): Number of trials\n",
+    "    prob (float): Probability of success on each trial\n",
+    "    lower_tail (bool): If True (default), probabilities are P[X ≤ x], otherwise P[X > x]\n",
+    "    log_p (bool): If True, probabilities are given as log(p)\n",
+    "    \n",
+    "    Returns:\n",
+    "    int or array-like: Quantile(s)\n",
+    "    \"\"\"\n",
+    "    if log_p:\n",
+    "        p = np.exp(p)\n",
+    "    \n",
+    "    if not lower_tail:\n",
+    "        p = 1 - p\n",
+    "    \n",
+    "    return stats.binom.ppf(p, size, prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3c7f3fce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Assuming pbinom, qbinom, and qbeta functions are already defined as in the previous responses\n",
+    "\n",
+    "def binom_blaker_lower_limit(x, n, level, tol=1e-7, maxiter=10000):\n",
+    "    if x <= 0:\n",
+    "        return 0\n",
+    "    if x > 0:\n",
+    "        alpha = 1 - level\n",
+    "        # Clopper-Pearson limit (CPL)\n",
+    "        lower = qbeta(alpha/2, x, n-x+1)\n",
+    "        p1 = pbinom(x-1, n, lower, lower_tail=False)\n",
+    "        q1_cp = qbinom(p1, n, lower) - 1\n",
+    "        upper = x / n\n",
+    "        iter_count = 0\n",
+    "        while upper - lower >= tol:\n",
+    "            iter_count += 1\n",
+    "            if iter_count > maxiter:\n",
+    "                print(f\"Warning: Tolerance limit of {tol} not attained after {maxiter} iterations for n = {n}, x = {x}\")\n",
+    "                break\n",
+    "            mid = (lower + upper) / 2\n",
+    "            p1 = pbinom(x-1, n, mid, lower_tail=False)\n",
+    "            # Blaker's limit is below the midpoint if either\n",
+    "            # (i)  acceptability at mid > alpha (NEW!! orig: >=), or\n",
+    "            # (ii) acceptability function has a discontinuity between\n",
+    "            #      the midpoint and CPL (first test).\n",
+    "            if p1 >= pbinom(q1_cp+1, n, mid) or p1 + pbinom(q1_cp, n, mid) > alpha:\n",
+    "                upper = mid\n",
+    "            else:\n",
+    "                lower = mid\n",
+    "        return lower\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "49613076",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blaker's lower limit for x=9, n=250, level=0.95: 0.01806264765057398\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "x = 9\n",
+    "n = 250\n",
+    "level = 0.95\n",
+    "result = binom_blaker_lower_limit(x, n, level)\n",
+    "print(f\"Blaker's lower limit for x={x}, n={n}, level={level}: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "bea55533",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binom_blaker_limits(x, n, level=0.95, tol=1e-10, **kwargs):\n",
+    "    \"\"\"\n",
+    "    Calculate Blaker's confidence interval for binomial proportion.\n",
+    "\n",
+    "    Parameters:\n",
+    "    x (int): Number of successes\n",
+    "    n (int): Number of trials\n",
+    "    level (float): Confidence level (default 0.95)\n",
+    "    tol (float): Tolerance for numerical calculations (default 1e-10)\n",
+    "    **kwargs: Additional arguments to pass to binom_blaker_lower_limit\n",
+    "\n",
+    "    Returns:\n",
+    "    tuple: (lower limit, upper limit) of the confidence interval\n",
+    "    \"\"\"\n",
+    "    if n < 1 or x < 0 or x > n:\n",
+    "        raise ValueError(f\"Parameters n = {n}, x = {x} wrong!\")\n",
+    "    if level <= 0 or level >= 1:\n",
+    "        raise ValueError(f\"Confidence level {level} out of (0, 1)!\")\n",
+    "    if tol <= 0:\n",
+    "        raise ValueError(f\"Numerical tolerance {tol} nonpositive!\")\n",
+    "\n",
+    "    lower = binom_blaker_lower_limit(x, n, level, tol, **kwargs)\n",
+    "    upper = 1 - binom_blaker_lower_limit(n - x, n, level, tol, **kwargs)\n",
+    "\n",
+    "    return (lower, upper)\n",
+    "\n",
+    "def binom_blaker_upper_limit(x,n,level,tol,**kwargs):\n",
+    "    return 1 - binom_blaker_lower_limit(n - x, n, level, tol, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b05e9847",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blaker's confidence interval for x=9, n=250, level=0.95: (0.018062669703021134, 0.0664471224445744)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "x = 9\n",
+    "n = 250\n",
+    "level = 0.95\n",
+    "result = binom_blaker_limits(x, n, level)\n",
+    "print(f\"Blaker's confidence interval for x={x}, n={n}, level={level}: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cbe00cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.019120937333435284, 0.06109849377621224)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom_blaker_limits(x, n, level=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e1c9917e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binom_blaker_p(x, n, p0, tol=1e-6, **kwargs):\n",
+    "    \"\"\"\n",
+    "    Calculate the p-value for a binomial test using Blaker's method.\n",
+    "\n",
+    "    This function implements Blaker's method for calculating the p-value\n",
+    "    of a binomial test with null hypothesis H0: p = p0 vs. H1: p != p0.\n",
+    "\n",
+    "    Parameters:\n",
+    "    x (int): Number of successes\n",
+    "    n (int): Number of trials\n",
+    "    p0 (float): Hypothesized probability of success under the null hypothesis\n",
+    "    tol (float): Tolerance for numerical calculations (default 1e-6)\n",
+    "    **kwargs: Additional arguments to pass to binom_blaker_lower_limit or binom_blaker_upper_limit\n",
+    "\n",
+    "    Returns:\n",
+    "    float: The p-value for the test\n",
+    "\n",
+    "    Raises:\n",
+    "    ValueError: If input parameters are invalid\n",
+    "\n",
+    "    Note:\n",
+    "    This implementation uses a binary search algorithm to find the p-value.\n",
+    "    The function relies on binom_blaker_lower_limit and binom_blaker_upper_limit,\n",
+    "    which should be defined separately.\n",
+    "    \"\"\"\n",
+    "    if n < 1 or x < 0 or x > n:\n",
+    "        raise ValueError(f\"Parameters n = {n}, x = {x} wrong!\")\n",
+    "    if p0 <= 0 or p0 >= 1:\n",
+    "        raise ValueError(f\"Hypothesized probability p0 = {p0} out of (0, 1)!\")\n",
+    "    if tol <= 0:\n",
+    "        raise ValueError(f\"Numerical tolerance {tol} nonpositive!\")\n",
+    "    \n",
+    "    p = x / n\n",
+    "    if p == p0:\n",
+    "        return 1\n",
+    "    if p < p0:\n",
+    "        sign = -1\n",
+    "        func = binom_blaker_upper_limit\n",
+    "    else:\n",
+    "        sign = 1\n",
+    "        func = binom_blaker_lower_limit\n",
+    "    \n",
+    "    left = 1e-10\n",
+    "    right = 1 - left\n",
+    "    while abs(right - left) > tol:\n",
+    "        mid = (right + left) / 2\n",
+    "        res = func(x, n, 1 - mid, tol, **kwargs)\n",
+    "        if sign * (res - p0) > 0:\n",
+    "            right = mid\n",
+    "        else:\n",
+    "            left = mid\n",
+    "    return left\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "780fadf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5742454528660103"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom_blaker_p(9,250,0.03)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "77e1be3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.020538330174017336"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom_blaker_p(9,250,0.073)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ce5d596",
    "metadata": {},
    "outputs": [],
    "source": []
