--- a/PPTX_and_stats/intervals.ipynb
+++ b/PPTX_and_stats/intervals.ipynb
@@ -264,8 +264,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1301689c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order-insensitive hash: 6049592359779828051\n"
+     ]
+    }
+   ],
+   "source": [
+    "def order_insensitive_hash(numbers):\n",
+    "    return hash((len(numbers), sum(numbers), sum(n**2 for n in numbers)))\n",
+    "\n",
+    "numbers = [3, 1, 4, 1, 5, 19]\n",
+    "hash_value = order_insensitive_hash(numbers)\n",
+    "print(f\"Order-insensitive hash: {hash_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "41d49df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XOR Hash: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hash_xor(numbers):\n",
+    "    h = 0\n",
+    "    for num in numbers:\n",
+    "        h ^= hash(num)\n",
+    "    return h\n",
+    "\n",
+    "numbers = [3, 1, 4, 1, 5, 9]\n",
+    "print(f\"XOR Hash: {hash_xor(numbers)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7a1b9f90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined Hash: -8359928141275670570\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hash_combined(numbers):\n",
+    "    length = len(numbers)\n",
+    "    sum_nums = sum(numbers)\n",
+    "    sum_squares = sum(n**2 for n in numbers)\n",
+    "    xor_hash = hash_xor(numbers)\n",
+    "    return hash((length, sum_nums, sum_squares, xor_hash))\n",
+    "\n",
+    "numbers = [3, 1, 4, 1, 5, 9]\n",
+    "print(f\"Combined Hash: {hash_combined(numbers)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b82ed8e",
    "metadata": {},
    "outputs": [],
    "source": []
